# feste

./: .gitignore  CHANGELOG.md  Cargo.toml  DATA.md  LICENSE  README.md
docs/: 01_TOKENIZATION.md  02_TENSOR_OPERATIONS.md  03_MODEL_ARCHITECTURE.md  04_TRAINING.md  05_TRAINING_EXAMPLES.md
examples/: 01_train_tokenizers.rs  02_tensor_operations.rs  03_model_architecture.rs  04_training_infrastructure.rs  05_train_shakespeare_tiny.rs  06_train_shakespeare_small.rs  07_train_shakespeare_medium.rs  08_train_shakespeare_gpt2.rs  train.rs
src/: gpt2_trainable.rs  gradients.rs  lib.rs  model.rs  optimizer.rs  tensor.rs  tokenizer.rs  train.rs  training_logger.rs
src/layers/: activation.rs  attention.rs  block.rs  dropout.rs  layer_norm.rs  linear.rs  mlp.rs  mod.rs
