[package]
name = "feste"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Educational GPT-2 style language model implemented from scratch in Rust"
license = "Apache-2.0"
repository = "https://github.com/your-username/feste"
keywords = ["machine-learning", "nlp", "transformer", "educational"]
categories = ["machine-learning", "education"]

[dependencies]
rayon = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Add test dependencies as needed

[[example]]
name = "train_shakespeare"
path = "examples/train_shakespeare.rs"

[profile.release]
opt-level = 3
lto = true
