[package]
name = "feste"
version = "0.1.2"
edition = "2021"
authors = ["Jeremy Andrews <jeremy@tag1.com>"]
description = "Educational GPT-2 style language model implemented from scratch in Rust"
license = "Apache-2.0"
repository = "https://github.com/your-username/feste"
keywords = ["machine-learning", "nlp", "transformer", "educational"]
categories = ["machine-learning", "education"]

[dependencies]
rayon = "1.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
